--- a/testMVC/Views/Products/_ProductPartialView.cshtml
+++ b/testMVC/Views/Products/_ProductPartialView.cshtml
@@ -1,39 +1,44 @@
 ﻿@model TestMVC.ViewModels.ProductForDisplayViewModel
 <link rel="stylesheet" href="~/css/site.css" />
-<div onclick="location.href='@Model.DetailURL'" class="card" style="width: 16rem; height: 26rem; cursor: pointer;">
+<div class="card" style="width: 16rem; height: 26rem; cursor: pointer;">
     @if (this.User.IsInRole("Admin"))
     {
+        
+    <form method="get" asp-controller="Products" asp-action="Edit">
         <div style="position : absolute; top:0; left: 0;">
-            <form method="get" asp-controller="Products" asp-action="Edit">
-                <input type="hidden" name="id" value="@Model.Id" />
-                <input class="btn btn-info" type="submit" value="Edit" />
-            </form>
+            <input type="hidden" name="id" value=@Model.Id />
+            <input class="btn btn-info" type="submit" value="Edit" />
         </div>
+    </form>
+        
     }
-    <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.ImageInByte))">
+    <img onclick="location.href='@Model.DetailURL'" class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.ImageInByte))">
     <div class="card-body">
-        <h5 class="card-title oneLines">@Model.Name</h5>
-        <p class="card-text threeLines">@Model.Description</p>
+        <h5 onclick="location.href='@Model.DetailURL'" class="card-title oneLines">@Model.Name</h5>
+        <p onclick="location.href='@Model.DetailURL'" class="card-text threeLines">@Model.Description</p>
 
         <div class="container-fluid buyButton">
-            <div class="row">
+            <div onclick="location.href='@Model.DetailURL'" class="row">
                 <div class="col-11 align-self-center" style="padding: 0;">
                     <h3 align="center">@Model.Price.ToString("N2")</h3>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-3" style="padding: 0;">
-                    <a  style="width:100%" class="btn btn-success" asp-area="" asp-controller="Products" asp-action="Buy" asp-route-productId="@Model.Id">Buy</a>
+            <form method="get" asp-controller="Products" asp-action="Buy">
+                <input type="hidden" name="productId" value=@Model.Id />
+                <div class="row">
+                    <div class="col-3" style="padding: 0;">
+                        <input style="width:100%" class="btn btn-success" type="submit" value="Buy" />
+                    </div>
+                    <div class="col-4" style="padding: 0; padding-left:20px;">
+                        <select class="form-control" id="ControlSelect" name="countOfProduct">
+                            @for (int i = 1; i <= 10; i++)
+                            {
+                                <option>@i</option>
+                            }
+                        </select>
+                    </div>
                 </div>
-                <div class="col-4" style="padding: 0; padding-left:20px;">
-                    <select class="form-control" id="exampleFormControlSelect1">
-                        @for (int i = 1; i <= 10; i++)
-                        {
-                            <option>@i</option>
-                        }
-                    </select>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
