--- a/testMVC/Views/Basket/Index.cshtml
+++ b/testMVC/Views/Basket/Index.cshtml
@@ -18,9 +18,17 @@
                     <input type="hidden" name="productId" value=@product.Id />
                     <input class="btn btn-danger" type="submit" value="Remove from basket" />
                 </form>
-             </td>
+            </td>
         </tr>
     }
-<tr><td colspan="3">Total amount: @ViewBag.TotalAmount</td></tr>
+    <tr><td colspan="4">Total amount: @ViewBag.TotalAmount</td></tr>
+
+    <tr>
+        <td colspan="4">
+            <form method="post" asp-controller="Basket" asp-action="MakeOrder">
+                <input class="btn btn-success" type="submit" value="Make Order" />
+            </form>
+        </td>
+    </tr>
 
 </table>
